Make Post queries

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -211,17 +211,17 @@
 <form>
   <div style="width: 500px; margin: 20px, border: 1pb">
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Имя</label>
-  <input type="text" class="form-control"  aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <label class="form-label">Имя</label>
+  <input name="nmae" type="text" class="form-control"  aria-label="Recipient's username" aria-describedby="basic-addon2">
   </div>
     <p>Почта</p>
   <div class="input-group mb-3">
     <span class="input-group-text" id="basic-addon1">@</span>
-  <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+  <input name="email" type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
   </div>
 
   <div class="input-group">
-    <textarea class="form-control" aria-label="With textarea"></textarea>
+    <textarea name="message" class="form-control" aria-label="With textarea"></textarea>
   </div>
 
     <br/><button type="submit" class="btn btn-primary">Отправить</button>
